--- a/naive_bayes.ipynb
+++ b/naive_bayes.ipynb
@@ -2,18 +2,30 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.model_selection import train_test_split, StratifiedKFold, cross_val_score\n",
     "from sklearn.preprocessing import LabelEncoder\n",
     "from sklearn.naive_bayes import GaussianNB\n",
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score, roc_auc_score, confusion_matrix\n",
+    "\n",
     "\n",
     "# Load dataset\n",
-    "data = pd.read_csv('Predict_Academic_Success_Modified.csv')"
+    "data = pd.read_csv('Predict_Academic_Success_Modified.csv')\n",
+    "\n",
+    "# Convert categorical columns to numerical using Label Encoding\n",
+    "categorical_columns = [\"Marital status\", \"Application mode\", \"Course\", \"Daytime/evening attendance\\t\", \n",
+    "                       \"Previous qualification\", \"Nacionality\", \"Mother's qualification\", \"Father's qualification\"]\n",
+    "\n",
+    "label_encoders = {}\n",
+    "for col in categorical_columns:\n",
+    "    le = LabelEncoder()\n",
+    "    data[col] = le.fit_transform(data[col])\n",
+    "    label_encoders[col] = le  # Save encoder in case we need to transform new data"
    ]
   },
   {
@@ -24,7 +36,8 @@
    "source": [
     "# Convert the target using Label Encoding ('Dropout', 'Enrolled', 'Graduate')\n",
     "label_encoder = LabelEncoder()\n",
-    "data[\"Target\"] = label_encoder.fit_transform(data[\"Target\"])"
+    "data[\"Target\"] = label_encoder.fit_transform(data[\"Target\"])\n",
+    "\n"
    ]
   },
   {
@@ -64,18 +77,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Initialize Naive Bayes model\n",
-    "model = GaussianNB()"
+    "nb_model = GaussianNB()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cross-validation accuracy scores: \n",
+      "[0.67398119 0.69278997 0.69905956 0.67084639 0.66037736 0.71698113\n",
+      " 0.66352201 0.62578616 0.67610063 0.72327044]\n",
+      "\n",
+      "Mean cross-validation accuracy: \n",
+      "0.6802714851836518\n",
+      "\n",
+      "\n",
+      "Evaluation Metrics:\n",
+      "   Metric    Score\n",
+      " Accuracy 0.687578\n",
+      "Precision 0.668846\n",
+      "   Recall 0.687578\n",
+      "  ROC-AUC 0.798770\n",
+      "\n",
+      "Confusion Matrix:\n",
+      "          Dropout  Enrolled  Graduate\n",
+      "Dropout       171        33        52\n",
+      "Enrolled       33        39        71\n",
+      "Graduate       32        28       338\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Apply 10-fold cross-validation\n",
+    "cv = StratifiedKFold(n_splits=10, shuffle=True, random_state=42)\n",
+    "cross_val_scores = cross_val_score(nb_model, X_train, y_train, cv=cv, scoring='accuracy')\n",
+    "print(f\"Cross-validation accuracy scores: \\n{cross_val_scores}\\n\")\n",
+    "print(f\"Mean cross-validation accuracy: \\n{cross_val_scores.mean()}\\n\")\n",
+    "\n",
+    "# Train the model\n",
+    "nb_model.fit(X_train, y_train)\n",
+    "\n",
+    "# Make predictions\n",
+    "y_pred = nb_model.predict(X_test)\n",
+    "\n",
+    "# Evaluation metrics\n",
+    "accuracy = accuracy_score(y_test, y_pred)\n",
+    "precision = precision_score(y_test, y_pred, average='weighted')\n",
+    "recall = recall_score(y_test, y_pred, average='weighted')\n",
+    "roc_auc = roc_auc_score(y_test, nb_model.predict_proba(X_test), multi_class=\"ovr\")\n",
+    "\n",
+    "# Confusion Matrix\n",
+    "conf_matrix = confusion_matrix(y_test, y_pred)\n",
+    "\n",
+    "# Create a DataFrame for the evaluation metrics\n",
+    "results_df = pd.DataFrame({\n",
+    "    \"Metric\": [\"Accuracy\", \"Precision\", \"Recall\", \"ROC-AUC\"],\n",
+    "    \"Score\": [accuracy, precision, recall, roc_auc]\n",
+    "})\n",
+    "\n",
+    "# Print the results in tabular form\n",
+    "print(\"\\nEvaluation Metrics:\")\n",
+    "print(results_df.to_string(index=False))\n",
+    "\n",
+    "# Print Confusion Matrix as DataFrame\n",
+    "conf_matrix_df = pd.DataFrame(conf_matrix, \n",
+    "                              index=label_encoder.classes_, \n",
+    "                              columns=label_encoder.classes_)\n",
+    "\n",
+    "print(\"\\nConfusion Matrix:\")\n",
+    "print(conf_matrix_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -89,7 +182,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
