edit naive bayes

--- a/naive_bayes.ipynb
+++ b/naive_bayes.ipynb
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -103,13 +103,14 @@
       "\n",
       "\n",
       "Evaluation Metrics:\n",
-      "   Metric    Score\n",
-      " Accuracy 0.687578\n",
-      "Precision 0.668846\n",
-      "   Recall 0.687578\n",
-      "  ROC-AUC 0.798770\n",
+      "    Metric    Score\n",
+      " Accuracy: 0.687578\n",
+      "Precision: 0.668846\n",
+      "   Recall: 0.687578\n",
+      "  ROC-AUC: 0.798770\n",
       "\n",
       "Confusion Matrix:\n",
+      "\n",
       "          Dropout  Enrolled  Graduate\n",
       "Dropout       171        33        52\n",
       "Enrolled       33        39        71\n",
@@ -141,7 +142,7 @@
     "\n",
     "# Create a DataFrame for the evaluation metrics\n",
     "results_df = pd.DataFrame({\n",
-    "    \"Metric\": [\"Accuracy\", \"Precision\", \"Recall\", \"ROC-AUC\"],\n",
+    "    \"Metric\": [\"Accuracy:\", \"Precision:\", \"Recall:\", \"ROC-AUC:\"],\n",
     "    \"Score\": [accuracy, precision, recall, roc_auc]\n",
     "})\n",
     "\n",
@@ -154,7 +155,7 @@
     "                              index=label_encoder.classes_, \n",
     "                              columns=label_encoder.classes_)\n",
     "\n",
-    "print(\"\\nConfusion Matrix:\")\n",
+    "print(\"\\nConfusion Matrix:\\n\")\n",
     "print(conf_matrix_df)"
    ]
   },
