edit naive bayes

--- a/naive_bayes.ipynb
+++ b/naive_bayes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,9 +18,10 @@
     "data = pd.read_csv('Predict_Academic_Success_Modified.csv')\n",
     "\n",
     "# Convert categorical columns to numerical using Label Encoding\n",
-    "categorical_columns = [\"Marital status\", \"Application mode\", \"Course\", \"Daytime/evening attendance\\t\", \n",
-    "                       \"Previous qualification\", \"Nacionality\", \"Mother's qualification\", \"Father's qualification\"]\n",
-    "\n",
+    "categorical_columns = [\"Previous qualification\", \"Mother's qualification\", \"Father's qualification\", \"Nacionality\",\n",
+    "                    \"Mother's occupation\", \"Father's occupation\", \"Marital status\", \"Application mode\",\n",
+    "                    \"Course\", \"Daytime/evening attendance\", \"Displaced\", \"Educational special needs\", \n",
+    "                    \"Debtor\", \"Tuition fees up to date\", \"Gender\", \"Scholarship holder\", \"International\"]\n",
     "label_encoders = {}\n",
     "for col in categorical_columns:\n",
     "    le = LabelEncoder()\n",
@@ -87,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -95,26 +96,26 @@
      "output_type": "stream",
      "text": [
       "Cross-validation accuracy scores: \n",
-      "[0.67398119 0.69278997 0.69905956 0.67084639 0.66037736 0.71698113\n",
-      " 0.66352201 0.62578616 0.67610063 0.72327044]\n",
+      "[0.70532915 0.66144201 0.69592476 0.68338558 0.72641509 0.76100629\n",
+      " 0.69496855 0.64779874 0.68553459 0.73899371]\n",
       "\n",
       "Mean cross-validation accuracy: \n",
-      "0.6802714851836518\n",
+      "0.7000798485834269\n",
       "\n",
       "\n",
       "Evaluation Metrics:\n",
       "    Metric    Score\n",
-      " Accuracy: 0.687578\n",
-      "Precision: 0.668846\n",
-      "   Recall: 0.687578\n",
-      "  ROC-AUC: 0.798770\n",
+      " Accuracy: 0.691343\n",
+      "Precision: 0.678075\n",
+      "   Recall: 0.691343\n",
+      "  ROC-AUC: 0.793278\n",
       "\n",
       "Confusion Matrix:\n",
       "\n",
       "          Dropout  Enrolled  Graduate\n",
-      "Dropout       171        33        52\n",
-      "Enrolled       33        39        71\n",
-      "Graduate       32        28       338\n"
+      "Dropout       169        42        45\n",
+      "Enrolled       29        46        68\n",
+      "Graduate       36        26       336\n"
      ]
     }
    ],
@@ -150,10 +151,11 @@
     "print(\"\\nEvaluation Metrics:\")\n",
     "print(results_df.to_string(index=False))\n",
     "\n",
-    "# Print Confusion Matrix as DataFrame\n",
-    "conf_matrix_df = pd.DataFrame(conf_matrix, \n",
-    "                              index=label_encoder.classes_, \n",
-    "                              columns=label_encoder.classes_)\n",
+    "# Get class labels from the LabelEncoder\n",
+    "class_labels = label_encoder.classes_\n",
+    "\n",
+    "# Create a DataFrame for the confusion matrix\n",
+    "conf_matrix_df = pd.DataFrame(conf_matrix, index=class_labels, columns=class_labels)\n",
     "\n",
     "print(\"\\nConfusion Matrix:\\n\")\n",
     "print(conf_matrix_df)"
