worked on unseen data evaluation metrics

--- a/naive_bayes.ipynb
+++ b/naive_bayes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -163,15 +163,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Load the unseen 10% dataset\n",
+    "X_unseen = unseen_data.drop(columns=[\"Target\"])\n",
+    "y_unseen = unseen_data[\"Target\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Use the trained model to predict outcomes for the unseen data\n",
+    "y_unseen_pred = nb_model.predict(X_unseen)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Unseen Data Evaluation Metrics:\n",
+      "   Metric    Score\n",
+      " Accuracy 0.683973\n",
+      "Precision 0.689478\n",
+      "   Recall 0.683973\n",
+      "  ROC-AUC 0.829791\n",
+      "\n",
+      "Confusion Matrix for Unseen Data:\n",
+      "\n",
+      "          Dropout  Enrolled  Graduate\n",
+      "Dropout        94        33        15\n",
+      "Enrolled       13        27        40\n",
+      "Graduate       14        25       182\n",
+      "\n",
+      "Confusion Matrix Summary for Unseen Data:\n",
+      "\n",
+      "Category  Matches  Mismatches\n",
+      " Dropout       94          48\n",
+      "Enrolled       27          53\n",
+      "Graduate      182          39\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Accuracy\n",
+    "unseen_accuracy = accuracy_score(y_unseen, y_unseen_pred)\n",
+    "\n",
+    "# Precision\n",
+    "unseen_precision = precision_score(y_unseen, y_unseen_pred, average='weighted')\n",
+    "\n",
+    "# Recall\n",
+    "unseen_recall = recall_score(y_unseen, y_unseen_pred, average='weighted')\n",
+    "\n",
+    "# ROC-AUC Score\n",
+    "unseen_roc_auc = roc_auc_score(y_unseen, nb_model.predict_proba(X_unseen), multi_class=\"ovr\")\n",
+    "\n",
+    "# Confusion Matrix\n",
+    "unseen_conf_matrix = confusion_matrix(y_unseen, y_unseen_pred)\n",
+    "\n",
+    "# Create evaluation metrics DataFrame\n",
+    "unseen_results_df = pd.DataFrame({\n",
+    "    \"Metric\": [\"Accuracy\", \"Precision\", \"Recall\", \"ROC-AUC\"],\n",
+    "    \"Score\": [unseen_accuracy, unseen_precision, unseen_recall, unseen_roc_auc]\n",
+    "})\n",
+    "\n",
+    "print(\"\\nUnseen Data Evaluation Metrics:\")\n",
+    "print(unseen_results_df.to_string(index=False))\n",
+    "\n",
+    "# Display Confusion Matrix\n",
+    "unseen_conf_matrix_df = pd.DataFrame(unseen_conf_matrix, \n",
+    "                                     index=label_encoder.classes_, \n",
+    "                                     columns=label_encoder.classes_)\n",
+    "\n",
+    "print(\"\\nConfusion Matrix for Unseen Data:\\n\")\n",
+    "print(unseen_conf_matrix_df)\n",
+    "\n",
+    "# Calculate matches (diagonal values)\n",
+    "matches = np.diag(unseen_conf_matrix)\n",
+    "\n",
+    "# Calculate mismatches (row sum - diagonal)\n",
+    "mismatches = unseen_conf_matrix.sum(axis=1) - matches\n",
+    "\n",
+    "# Create reformatted confusion matrix DataFrame\n",
+    "unseen_conf_summary_df = pd.DataFrame({\n",
+    "    \"Category\": label_encoder.classes_,\n",
+    "    \"Matches\": matches,\n",
+    "    \"Mismatches\": mismatches\n",
+    "})\n",
+    "\n",
+    "print(\"\\nConfusion Matrix Summary for Unseen Data:\\n\")\n",
+    "print(unseen_conf_summary_df.to_string(index=False))\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -185,7 +282,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.1"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
