--- a/naive_bayes.ipynb
+++ b/naive_bayes.ipynb
@@ -31,14 +31,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Convert the target using Label Encoding ('Dropout', 'Enrolled', 'Graduate')\n",
     "label_encoder = LabelEncoder()\n",
-    "data[\"Target\"] = label_encoder.fit_transform(data[\"Target\"])\n",
-    "\n"
+    "data[\"Target\"] = label_encoder.fit_transform(data[\"Target\"])"
    ]
   },
   {
@@ -184,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +205,7 @@
       "Enrolled       13        27        40\n",
       "Graduate       14        25       182\n",
       "\n",
-      "Confusion Matrix Summary for Unseen Data:\n",
+      "Evaluation Matrix for Unseen Data:\n",
       "\n",
       "Category  Matches  Mismatches\n",
       " Dropout       94          48\n",
@@ -261,8 +260,8 @@
     "    \"Mismatches\": mismatches\n",
     "})\n",
     "\n",
-    "print(\"\\nConfusion Matrix Summary for Unseen Data:\\n\")\n",
-    "print(unseen_conf_summary_df.to_string(index=False))\n"
+    "print(\"\\nEvaluation Matrix for Unseen Data:\\n\")\n",
+    "print(unseen_conf_summary_df.to_string(index=False))"
    ]
   }
  ],
