--- a/naive_bayes.ipynb
+++ b/naive_bayes.ipynb
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -192,6 +192,7 @@
      "text": [
       "\n",
       "Unseen Data Evaluation Metrics:\n",
+      "\n",
       "   Metric    Score\n",
       " Accuracy 0.683973\n",
       "Precision 0.689478\n",
@@ -205,7 +206,7 @@
       "Enrolled       13        27        40\n",
       "Graduate       14        25       182\n",
       "\n",
-      "Evaluation Matrix for Unseen Data:\n",
+      "Actual Vs Predicted:\n",
       "\n",
       "Category  Matches  Mismatches\n",
       " Dropout       94          48\n",
@@ -236,7 +237,7 @@
     "    \"Score\": [unseen_accuracy, unseen_precision, unseen_recall, unseen_roc_auc]\n",
     "})\n",
     "\n",
-    "print(\"\\nUnseen Data Evaluation Metrics:\")\n",
+    "print(\"\\nUnseen Data Evaluation Metrics:\\n\")\n",
     "print(unseen_results_df.to_string(index=False))\n",
     "\n",
     "# Display Confusion Matrix\n",
@@ -260,7 +261,7 @@
     "    \"Mismatches\": mismatches\n",
     "})\n",
     "\n",
-    "print(\"\\nEvaluation Matrix for Unseen Data:\\n\")\n",
+    "print(\"\\nActual Vs Predicted:\\n\")\n",
     "print(unseen_conf_summary_df.to_string(index=False))"
    ]
   }
