--- a/svm_algorithm_mino.ipynb
+++ b/svm_algorithm_mino.ipynb
@@ -4,9 +4,11 @@
    "cell_type": "code",
    "id": "b561f88fb9a29115",
    "metadata": {
+    "jupyter": {
+     "is_executing": true
+    },
     "ExecuteTime": {
-     "end_time": "2025-03-17T13:16:02.383774Z",
-     "start_time": "2025-03-17T13:15:25.563079Z"
+     "start_time": "2025-03-17T13:40:10.224267Z"
     }
    },
    "source": [
@@ -25,9 +27,13 @@
     "label_encoder = LabelEncoder()\n",
     "data[\"Target\"] = label_encoder.fit_transform(data[\"Target\"])  # Dropout = 0, Enrolled = 1, Graduate = 2\n",
     "\n",
+    "# Split into 90% training & testing, 10% unseen\n",
+    "train_test_data, unseen_data = train_test_split(\n",
+    "    data, test_size=0.10, random_state=42, stratify=data[\"Target\"])\n",
+    "\n",
     "# Separate features (X) and target (y)\n",
-    "X = data.iloc[:, :-1]  # All columns except Target\n",
-    "y = data[\"Target\"]  # Target column\n",
+    "X = train_test_data.iloc[:, :-1]  # All columns except Target\n",
+    "y = train_test_data[\"Target\"]  # Target column\n",
     "\n",
     "# encode categorical features\n",
     "categorical_cols = [\"Previous qualification\", \"Mother's qualification\", \"Father's qualification\", \"Nacionality\",\n",
@@ -42,13 +48,9 @@
     "scaler = StandardScaler()\n",
     "X_scaled = scaler.fit_transform(X)\n",
     "\n",
-    "# Split into 90% training & testing, 10% unseen\n",
-    "X_train_test, X_unseen, y_train_test, y_unseen = train_test_split(\n",
-    "    X_scaled, y, test_size=0.10, random_state=42, stratify=y)\n",
-    "\n",
     "# Split 90% into 80% training and 20% testing\n",
     "X_train, X_test, y_train, y_test = train_test_split(\n",
-    "    X_train_test, y_train_test, test_size=0.20, random_state=42, stratify=y_train_test)\n",
+    "    X, y, test_size=0.20, random_state=42, stratify=y)\n",
     "\n",
     "# Train SVM model with the training data\n",
     "svm_model = SVC(kernel='linear', probability=True, random_state=42)\n",
@@ -62,14 +64,14 @@
     "y_pred = svm_model.predict(X_test)"
    ],
    "outputs": [],
-   "execution_count": 65
+   "execution_count": null
   },
   {
    "cell_type": "code",
    "id": "2fec2125dc4fc9ea",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-17T13:16:02.831106Z",
+     "end_time": "2025-03-17T13:40:09.944331300Z",
      "start_time": "2025-03-17T13:16:02.401812Z"
     }
    },
@@ -207,7 +209,7 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-17T13:08:17.199204Z",
+     "end_time": "2025-03-17T13:40:09.971343100Z",
      "start_time": "2025-03-17T13:08:17.177187Z"
     }
    },
@@ -215,12 +217,68 @@
    "outputs": [],
    "execution_count": 64,
    "source": [
+    "#For unseen data\n",
+    "#Get the target and feature of the training/testing data\n",
+    "X_unseen = unseen_data.drop(columns=[\"Target\"]) # Features\n",
+    "y_unseen = unseen_data[\"Target\"] # Target\n",
+    "\n",
+    "# encode categorical features\n",
+    "for col in categorical_cols:\n",
+    "    X_unseen[col] = LabelEncoder().fit_transform(X_unseen[col])\n",
+    "\n",
+    "X_unseen = pd.DataFrame(scaler.fit_transform(X_unseen), columns=X_unseen.columns)\n",
+    "\n",
+    "#apply 10 fold cross validation\n",
+    "unseen_cv_scores = cross_val_score(svm_model, X_unseen, y_unseen, cv=kf, scoring=\"accuracy\")\n",
+    "\n",
     "y_unseen_predict = svm_model.predict(X_unseen)\n",
     "y_unseen_predict_labels = label_encoder.inverse_transform(y_unseen_predict)\n",
     "unseen_svm = pd.DataFrame({\"Actual\": label_encoder.inverse_transform(y_unseen), \"Predicted\": y_unseen_predict_labels})\n",
     "unseen_svm.to_csv(\"SVM Algorithm's Predictions for Unseen Data.csv\", index=False)"
    ],
    "id": "126a6cb8dbbaea30"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "#Evaluation metrics for unseen data\n",
+    "unseen_accuracy = accuracy_score(y_unseen, y_unseen_predict)\n",
+    "unseen_precision = precision_score(y_unseen, y_unseen_predict, average='weighted')\n",
+    "unseen_recall = recall_score(y_unseen, y_unseen_predict, average='weighted')\n",
+    "unseen_roc_auc = roc_auc_score(y_unseen, svm_model.predict_proba(X_unseen), multi_class=\"ovr\")\n",
+    "unseen_conf_matrix = confusion_matrix(y_unseen, y_unseen_predict)\n",
+    "\n",
+    "# Dictionary for display the result in tabular form\n",
+    "unseen_metrics = {\n",
+    "    \"Metric\": [\n",
+    "        \"Cross-Validation Accuracy\",\n",
+    "        \"Accuracy\",\n",
+    "        \"Precision\",\n",
+    "        \"Recall\",\n",
+    "        \"ROC-AUC Score\"\n",
+    "    ],\n",
+    "    \"Value\": [\n",
+    "        np.mean(unseen_cv_scores),\n",
+    "        unseen_accuracy,\n",
+    "        unseen_precision,\n",
+    "        unseen_recall,\n",
+    "        unseen_roc_auc\n",
+    "    ]\n",
+    "}\n",
+    "# Display Confusion Matrix  of unseen data\n",
+    "df_unseen_metrics = pd.DataFrame(unseen_metrics)\n",
+    "disp = ConfusionMatrixDisplay.from_predictions(\n",
+    "    y_unseen, y_unseen_predict, display_labels=class_names, cmap=plt.cm.Blues\n",
+    ")\n",
+    "\n",
+    "# Display the results for unseen data\n",
+    "print(\"\\nUnseen Data Evaluation Results\\n\")\n",
+    "df_unseen_metrics"
+   ],
+   "id": "1018cbaac70731b2"
   }
  ],
  "metadata": {
